@@ -1,5 +1,9 @@
 2008-04-26  Brian Gough  <bjg@network-theory.co.uk>
 
+	* vegas.c (gsl_monte_vegas_integrate): compute running totals as
+	volatile double to prevent problems with excess precision, use
+	meaningful variable names for sum of squares, variance and sigma.
+
 	* test_main.c: compute the ensemble mean more accurately for the tests
 
 	* test.c: added a test for warm-start vegas, as well as cold-start
