@@ -1,3 +1,6 @@
+** Improved the handling of constant regions in Vegas by eliminating
+   spurious excess precision when computing box variances.
+
 ** Fixed a potential division by zero in gsl_monte_miser when the
    left/right weight factors decrease below 1.
 
